--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,5 +2,12 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+    background-color: black;
+    color: white;
 }
 
+@media screen and (max-width: 768px) {
+    .desaparecer {
+      display: none;
+    }
+  }
